deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigdata-miniproject-api-deploy
  namespace: bigdata-team
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bigdata-miniproject-api
  template:
    metadata:
      labels:
        app: bigdata-miniproject-api
    spec:
      containers:
        - name: bigdata-miniproject-api
          image: harbor.kcnet.bigdata.com:30443/bigdata/bigdata_miniproject_api:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
      imagePullSecrets:
        - name: harbor-registry
