deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bigdata_miniproject_api_svc
  namespace: bigdata-team
spec:
  selector:
    app: bigdata_miniproject_api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http
