deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bigdata_miniproject_api_ing
  namespace: bigdata_team
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bmapi.kcnet.bigdata.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bigdata_miniproject_api_svc
            port:
              number: 80
